# windows-taskscheduler-api-rust

./: Cargo.toml  README.md
bindings/: Cargo.toml  build.rs
examples/: open_notepad.rs
examples/open_notepad/: Cargo.toml
examples/open_notepad/src/: main.rs
src/: lib.rs  main.rs  registered_task.rs  task.rs  task_action.rs  task_settings.rs  task_trigger.rs  variant_d.rs
src/task/: mod.rs  task_action.rs  task_settings.rs  trigger.rs
