[package]
name = "windows-taskscheduler"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "open_notepad"
path = "examples/open_notepad.rs"

[dependencies.windows]
version = "0.37"
features = [
    "Win32_System_Com",
    "Win32_System_TaskScheduler",
    "Win32_System_Ole",
    "Win32_Foundation",
]
